--- a/index.html
+++ b/index.html
@@ -27,42 +27,42 @@
             <img class="element__photo" src="./images/karachaevsk.png" alt="Карачаевск.">
             <div class="element__text">
               <h3 class="element__title">Карачаевск</h3>
-              <div class="element__like_off" id="heart_1" onclick="changeLike(1)"></div>
+              <div class="element__like-off" id="heart_1" onclick="changeLike(1)"></div>
           </div>
         </div> 
         <div class="element">
             <img class="element__photo" src="./images/elbrus.png" alt="Гора Эльбрус.">
             <div class="element__text">
               <h3 class="element__title">Гора Эльбрус</h3>
-              <div class="element__like_off" id="heart_2" onclick="changeLike(2)"></div>
+              <div class="element__like-off" id="heart_2" onclick="changeLike(2)"></div>
             </div>
         </div>
         <div class="element">
             <img class="element__photo" src="./images/dombai.png" alt="Домбай.">
             <div class="element__text">
               <h3 class="element__title">Домбай</h3>
-              <div class="element__like_off" id="heart_3" onclick="changeLike(3)"></div>
+              <div class="element__like-off" id="heart_3" onclick="changeLike(3)"></div>
             </div>
         </div>
         <div class="element">
             <img class="element__photo" src="./images/elbrus.png" alt="Гора Эльбрус.">
             <div class="element__text">
               <h3 class="element__title">Гора Эльбрус</h3>
-              <div class="element__like_off" id="heart_4" onclick="changeLike(4)"></div>
+              <div class="element__like-off" id="heart_4" onclick="changeLike(4)"></div>
             </div>
         </div>
         <div class="element">
             <img class="element__photo" src="./images/dombai.png" alt="Домбай.">
             <div class="element__text">
               <h3 class="element__title">Домбай</h3>
-              <div class="element__like_off" id="heart_5" onclick="changeLike(5)"></div>
+              <div class="element__like-off" id="heart_5" onclick="changeLike(5)"></div>
             </div>
         </div>
         <div class="element">
             <img class="element__photo" src="./images/karachaevsk.png" alt="Карачаевск.">
             <div class="element__text">
               <h3 class="element__title">Карачаевск</h3>
-              <div class="element__like_off" id="heart_6" onclick="changeLike(6)"></div>
+              <div class="element__like-off" id="heart_6" onclick="changeLike(6)"></div>
             </div>
         </div>
     </section>
